Fix hidden hamburger menu and misaligned footer icons

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,7 @@
         position: relative;
         display: flex !important;
         margin: 0px 5px;
+        flex-shrink: 0;
 
         .profileMenu {
           width: 1.75rem;
@@ -139,6 +140,7 @@
     background-color: var(--secondary-color);
     color: var(--secondary-color-inverted);
     font-size: 1rem;
+    flex-wrap: wrap;
 
     .column {
       display: flex;
@@ -146,6 +148,8 @@
     }
 
     .row {
+      display: flex;
+      align-items: center;
       a {
         display: inline-flex;
         .linkedin,
@@ -154,6 +158,7 @@
           width: 1.25rem;
           background-repeat: no-repeat;
           cursor: pointer;
+          // filter: invert(1);
         }
 
         .linkedin {
